Cache titleToCommit map between calls